--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -4,8 +4,8 @@
 /*===== VARIABLES CSS =====*/
 :root{
   /*===== Colores =====*/
-  --first-color: #9D4BFF;
-  --first-color-dark: #23004D;
+  --first-color: #0ACCCE;
+  --first-color-dark: #04434e;
   --first-color-light: #A49EAC;
   --first-color-lighten: #F2F2F2;
 
